--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 
         </p>
 
-        <!-- <p>
-            <a href="https://validator.w3.org/check?uri=https://mtirha.github.io/github.io/">
+        <p>
+            <a href="https://validator.w3.org/check?uri=https://kaoutarsabir.github.io/github.io/index.html">
                 <img src="images/HTML-checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
             </a>
-        </p> -->
+        </p>
 
-        <a href="http://validator.w3.org/check/referer">
+        <!-- <a href="http://validator.w3.org/check/referer">
             <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" />
-        </a>
+        </a> -->
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
             <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="html validator" />
         </a>
