--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <p>
             <a href="https://validator.w3.org/check?uri=https://kaoutarsabir.github.io/github.io/index.html">
-                <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="Le World Wide Web Consortium" width="100" height="30">
+                <img src="images/css_checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
             </a>
         </p>
 
