--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
     </div>
     <div id="footer" class="section">
         <p>
-            <span>Kaoutar Sabir</span> </br> Maharishi University of Management </br>
-            Adress : 1000 N 4th St, Fairfield, Iowa, 52557 </br>
-            Email: <a href="#">kaoutarsabir@miu.edu </a></br>
+            <span>Kaoutar Sabir</span> <br/> Maharishi University of Management <br/> Adress : 1000 N 4th St, Fairfield, Iowa, 52557 <br> Email: <a href="#">kaoutarsabir@miu.edu </a><br>
 
 
 
