--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>My Blog</title>
@@ -8,8 +8,6 @@
 </head>
 
 <body>
-
-
     <!-- header start -->
     <div id="header" class="section">
         <img alt="" class="img-circle" src="images/kaoutar.png" />
