--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </p>
 
         <p>
-            <a href="https://validator.w3.org/check?uri=https://kaoutarsabir.github.io/github.io/index.html">
+            <a href="http://jigsaw.w3.org/css-validator/check?uri=https://kaoutarsabir.github.io/github.io/index.html">
                 <img src="images/css_checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
             </a>
         </p>
