--- a/index.html
+++ b/index.html
@@ -46,10 +46,14 @@
         </p>
 
         <p>
-            <a href="http://jigsaw.w3.org/css-validator/check?uri=https://kaoutarsabir.github.io/github.io/index.html">
+            <a href="http://jigsaw.w3.org/css-validator/check?uri=https://kaoutarsabir.github.io/github.io/">
                 <img src="images/css_checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
             </a>
         </p>
+
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Faboutme.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+            <img src="images/css_checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
+        </a>
 
         <!-- <a href="http://validator.w3.org/check/referer">
             <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" />
