--- a/index.html
+++ b/index.html
@@ -2,64 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>My Blog</title>
-    <link rel="stylesheet" type="text/css" media="all" href="css/stylepage.css">
-    <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kaoutar Sabir - WAP Labs</title>
 </head>
 
 <body>
-    <!-- header start -->
-    <div id="header" class="section">
-        <img alt="" class="img-circle" src="images/kaoutar.png" />
-        <p>Kaoutar Sabir</p>
-    </div>
-    <!-- header end -->
-    <div class="section">
-        <ul>
-            <li>Lab01- Home page</li>
-            <li>Lab02- About Me</li>
-            <li>Lab03- Recipe</li>
-            <li>Lab04- Movie Review</li>
-            <li>Lab05</li>
-            <li>Lab06</li>
-            <li>Lab07</li>
-            <li>Lab08</li>
-            <li>Lab09</li>
-            <li>Lab10</li>
-            <li>Final Project</li>
-        </ul>
-
-    </div>
-    <div id="footer" class="section">
-        <p>
-            <span>Kaoutar Sabir</span> <br/> Maharishi University of Management <br/> Adress : 1000 N 4th St, Fairfield, Iowa, 52557 <br> Email: <a href="#">kaoutarsabir@miu.edu </a><br>
-
-
-
-
-        </p>
-
-        <p>
-            <a href="https://validator.w3.org/check?uri=https://kaoutarsabir.github.io/github.io/index.html">
-                <img src="images/HTML-checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
-            </a>
-        </p>
-
-        <!-- <p>
-            <a href="http://jigsaw.w3.org/css-validator/check?uri=https://kaoutarsabir.github.io/github.io/">
-                <img src="images/css_checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
-            </a>
-        </p> -->
-
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
-            <img src="images/css_checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
-        </a>
-
-
-    </div>
-
-
-
+    <h3>Welcome to WAP Labs</h3>
 </body>
 
 </html>
