--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 <body>
     <h3>Welcome to WAP Labs</h3>
+
+    <a href="lab1/lab1.html">lab 1</a>
+    <a href="">lab 2</a>
+
+
 </body>
 
 </html>
