--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -40,7 +40,7 @@
         </p>
 
         <p>
-            <a href="https://validator.w3.org/check?uri=https://kaoutarsabir.github.io/github.io/index.html">
+            <a href="https://validator.w3.org/check?uri=https://kaoutarsabir.github.io/github.io/lab1/lab1.html">
                 <img src="images/HTML-checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
             </a>
         </p>
@@ -51,7 +51,7 @@
             </a>
         </p> -->
 
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Flab1%2Flab1.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
             <img src="images/css_checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
         </a>
 
