--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -11,8 +11,9 @@
 <body>
 
     <h1>Welcome to WAP Labs</h1>
-    <h2><a href="lab1/lab1.html">lab 1</a></h2>
-    <h2><a href="lab2/lab2.html"="">lab 2</a></h2>
+    <h2><a href="ex1/aboutme.html">About Me</a></h2>
+    <h2><a href="ex2/pie.html">Recipe</a></h2>
+    <h2><a href="../index.html">Home</a></h2>
 
 
 </body>
