--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -16,7 +16,7 @@
     <!-- header end -->
     <div class="section">
         <ul>
-            <li>Lab01- Home page</li>
+            <li><a href="../index.html">Lab01- Home page</a></li>
             <li>Lab02- About Me</li>
             <li>Lab03- Recipe</li>
             <li>Lab04- Movie Review</li>
@@ -34,9 +34,6 @@
         <p>
             <span>Kaoutar Sabir</span> <br/> Maharishi University of Management <br/> Adress : 1000 N 4th St, Fairfield, Iowa, 52557 <br> Email: <a href="#">kaoutarsabir@miu.edu </a><br>
 
-
-
-
         </p>
 
         <p>
@@ -44,17 +41,11 @@
                 <img src="images/HTML-checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
             </a>
         </p>
-
-        <!-- <p>
-            <a href="http://jigsaw.w3.org/css-validator/check?uri=https://kaoutarsabir.github.io/github.io/">
+        <p>
+            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Flab1%2Flab1.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img src="images/css_checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
             </a>
-        </p> -->
-
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Flab1%2Flab1.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
-            <img src="images/css_checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
-        </a>
-
+        </p>
 
     </div>
 
