--- a/lab2/ex1/aboutme.html
+++ b/lab2/ex1/aboutme.html
@@ -65,7 +65,7 @@
             </a>
         </p>
         <p>
-            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Flab2%2Fex1%2Flab2.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Flab2%2Fex1%2Faboutme.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img src="images/css_checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
             </a>
         </p>
