--- a/lab2/ex2/pie.html
+++ b/lab2/ex2/pie.html
@@ -14,11 +14,7 @@
 
     <img src="images/pie.jpg" alt="lemon meringue pie" /> <br>
     <div>
-        One 9-inch pie<br>
-        30 Min - Prep time<br>
-        10 Min - Cook time<br>
-        40 Min - Total<br>
-        8 Servings<br>
+        One 9-inch pie<br> 30 Min - Prep time<br> 10 Min - Cook time<br> 40 Min - Total<br> 8 Servings<br>
     </div>
 
     <div>
@@ -108,30 +104,19 @@
                 </ul>
             </li>
             <li>
-                <span class="directions">Bake: </span>Bake in preheated oven for 10 minutes, or until meringue is golden
-                brown.
+                <span class="directions">Bake: </span>Bake in preheated oven for 10 minutes, or until meringue is golden brown.
             </li>
         </ol>
-        This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's
-        favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of <span
-            class="delete">cake</span> pie!
+        This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of <span class="delete">cake</span>        pie!
     </div>
 
     <div>
         <h3 class="headers">USER COMMENTS</h3>
         <div class="comment">
-            <p class="comments">This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie
-                is thickened
-                with
-                cornstarch and flour in addition to egg yolks, and contains no milk.<br><br>
-                - Emilie S.</p>
-            <p class="comments">Q: What do you call an ape who loves pie?<br>
-                A: A meringue-utan.<br><br>
-                - Vickie K.</p>
+            <p class="comments">This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.<br><br> - Emilie S.</p>
+            <p class="comments">Q: What do you call an ape who loves pie?<br> A: A meringue-utan.<br><br> - Vickie K.</p>
             <p class="comments">This site can really <b>engage</b> my interest. Follow the recipe above and <b>make it
-                    so</b>!
-                This pie is <b>number one</b>.<br><br>
-                - Jean-Luc Piecard</p>
+                    so</b>! This pie is <b>number one</b>.<br><br> - Jean-Luc Piecard</p>
         </div>
     </div>
 
@@ -142,7 +127,7 @@
         <a href="https://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie
             recipes</a>
         <br>
-        <a href="#">Home</a>
+        <a href="../../index.html">Home</a>
 
         <pre>
 Copyright &copy; 2012 Granny's Pies 
@@ -151,11 +136,10 @@ Copyright &copy; 2012 Granny's Pies
         </pre>
 
         <div>
-            <a href="">
+            <a href="https://validator.w3.org/check?uri=https://kaoutarsabir.github.io/github.io/lab2/ex2/pie.html">
                 <img src="images/HTML-checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
             </a>
-
-            <a href="">
+            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Flab2%2Fex2%2Fpie.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img src="images/css_checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
             </a>
         </div>
