--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -5,6 +5,7 @@
     <title>My Blog</title>
     <link rel="stylesheet" type="text/css" media="all" href="css/stylepage.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+    <link href="../icon/favicon.ico" rel="shortcut icon" type="image/icon" />
 </head>
 
 <body>
