--- a/lab2/ex1/aboutme.html
+++ b/lab2/ex1/aboutme.html
@@ -8,6 +8,7 @@
         About Me - kaoutar
     </title>
     <link href="style/stylepage.css" type="text/css" rel="stylesheet" />
+    <link href="../../icon/favicon.ico" rel="shortcut icon" type="image/icon" />
 </head>
 
 <body>
