--- a/lab2/ex2/pie.html
+++ b/lab2/ex2/pie.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grandma's Lemon Meringue Pie</title>
     <link href="style/recipe.css" type="text/css" rel="stylesheet" />
+    <link href="../../icon/favicon.ico" rel="shortcut icon" type="image/icon" />
 </head>
 
 <body>
