--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaoutar Sabir - WAP Labs</title>
+    <link href="../icon/favicon.ico" rel="shortcut icon" type="image/icon" />
 </head>
 
 <body>
