--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>Welcome to WAP Labs</h1>
     <h2><a href="lab1/lab1.html">lab 1</a></h2>
     <h2><a href="lab2/lab2.html"="">lab 2</a></h2>
+    <h2><a href="lab3/tmnt.html"="">lab 3</a></h2>
 
 
 </body>
