--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -191,11 +191,11 @@
     <div class="validator">
 
         <a href="https://validator.w3.org/check?uri=https://kaoutarsabir.github.io/github.io/lab3/tmnt.html">
-            <img src="HTML-checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
+            <img src="w3c-html.png" alt="Le World Wide Web Consortium" width="100" height="30">
         </a>
 
         <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Flab3%2Ftmnt.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
-            <img src="css_checker.png" alt="Le World Wide Web Consortium" width="100" height="30">
+            <img src="w3c-css.png" alt="Le World Wide Web Consortium" width="100" height="30">
         </a>
     </div>
 </body>
