--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h2><a href="lab1/lab1.html">lab 1</a></h2>
     <h2><a href="lab2/lab2.html"="">lab 2</a></h2>
     <h2><a href="lab3/tmnt.html"="">lab 3</a></h2>
+    <h2><a href="lab4/home.html"="">lab 3</a></h2>
 
 
 </body>
