--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body>
 
     <h1>Welcome to WAP Labs</h1>
-    <h2><a href="lab1/lab1.html">lab 1</a></h2>
-    <h2><a href="lab2/lab2.html"="">lab 2</a></h2>
-    <h2><a href="lab3/tmnt.html"="">lab 3</a></h2>
-    <h2><a href="lab4/home.html"="">lab 3</a></h2>
+    <br>
+    <h2><a href="lab1/lab1.html">lab 1 : Home Page</a></h2>
+    <h2><a href="lab2/lab2.html"="">lab 2 : Basic CSS</a></h2>
+    <h2><a href="lab3/tmnt.html"="">lab 3 : Layout</a></h2>
+    <h2><a href="lab4/home.html"="">lab 4 : Responsive Layout </a></h2>
 
 
 </body>
