--- a/lab4/homeBootstrap.html
+++ b/lab4/homeBootstrap.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="favicon.ico" rel="shortcut icon" type="image/icon" />
 
     <style>
         body {
