--- a/lab4/homeBootstrap.html
+++ b/lab4/homeBootstrap.html
@@ -76,16 +76,16 @@
     </div>
 
     <div class="row menu">
-        <div class="col-1 menuItem">Menu1</div>
-        <div class="col-1 menuItem">Menu2</div>
-        <div class="col-1 menuItem">Menu3</div>
-        <div class="col-9 menuItem"></div>
+        <div class="col-2 col-sm-2 col-md-2 col-lg-1 menuItem">Menu1</div>
+        <div class="col-2 col-sm-2 col-md-2 col-lg-1 menuItem">Menu2</div>
+        <div class="col-2 col-sm-2 col-md-2 col-lg-1 menuItem">Menu3</div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-9 menuItem"></div>
     </div>
 
     <div class="row column">
-        <div class="col-4 colomnItem1">Column1</div>
-        <div class="col-4 colomnItem2">Column2</div>
-        <div class="col-4 colomnItem3">Column3</div>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4 colomnItem1">Column1</div>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4 colomnItem2">Column2</div>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4 colomnItem3">Column3</div>
     </div>
 
     <div class="row footer">
