--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h2><a href="lab2/lab2.html"="">lab 2 : Basic CSS</a></h2>
     <h2><a href="lab3/tmnt.html"="">lab 3 : Layout</a></h2>
     <h2><a href="lab4/home.html"="">lab 4 : Responsive Layout </a></h2>
+    <h2><a href="lab5/jsintro.html"="">lab 5 : JS functions </a></h2>
 
 
 </body>
