--- a/lab5/jsintro.html
+++ b/lab5/jsintro.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="lab5.js" type="text/javascript" />
+    <link href="lab5.js" type="text/javascript" def />
 </head>
 
 <body>
+
+
 
 </body>
 
