--- a/lab5/jsintro.html
+++ b/lab5/jsintro.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="lab5.js" type="text/javascript" def />
+    <link href="lab5.js" type="text/javascript" defer />
 </head>
 
 <body>
