--- a/lab5/jsintro.html
+++ b/lab5/jsintro.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="lab5.js" type="text/javascript" defer />
+    <script src="lab5.js" type="text/javascript" defer>
+    </script>
 </head>
 
 <body>
 
-    hello
+    <p>Please, click on CTRL_SHIFT_J :
+        <br> Look in the Chrome developer > console
+        <br> to see the output</p>
 
 </body>
 
