--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <h2><a href="lab3/tmnt.html"="">lab 3 : Layout</a></h2>
     <h2><a href="lab4/home.html"="">lab 4 : Responsive Layout </a></h2>
     <h2><a href="lab5/jsintro.html"="">lab 5 : JS functions </a></h2>
+    <h2><a href="lab6/ascii.html"="">lab 6: ASCII Animation Viewer </a></h2>
 
 
 </body>
