--- a/lab6/ascii.html
+++ b/lab6/ascii.html
@@ -47,18 +47,18 @@
             <label><input id="turbo" type="checkbox">Turbo</label>
         </fieldset>
     </div>
-    <d<a href="https://validator.w3.org/check?uri=https://kaoutarsabir.github.io/github.io/lab1/lab1.html">
+    <a href="https://validator.w3.org/check?uri=https://kaoutarsabir.github.io/github.io/lab6/ascii.html">
         <img src="images/w3c-html.png" alt="Le World Wide Web Consortium" width="100" height="30">
-        </a><br>
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Flab1%2Flab1.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
-            <img src="images/w3c-css.png" alt="Le World Wide Web Consortium" width="100" height="30">
-        </a><br>
-        <a href="http://webster.cs.washington.edu/jslint?referer">
-            <img src="images/w3c-js.png" alt="JavaScript Lint">
-        </a>
+    </a><br>
+    <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Flab6%2Fascii.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+        <img src="images/w3c-css.png" alt="Le World Wide Web Consortium" width="100" height="30">
+    </a><br>
+    <a href="http://webster.cs.washington.edu/jslint?uri=https://kaoutarsabir.github.io/github.io/lab6/ascii.html">
+        <img src="images/w3c-js.png" alt="JavaScript Lint" width="100" height="30">
+    </a>
 
 
-        </div>
+    </div>
 
 
 
