--- a/lab6/ascii.html
+++ b/lab6/ascii.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/ascii.css" type="text/css" rel="stylesheet">
     <link href="images/favicon.ico" rel="shortcut icon" type="image/icon" />
-    <script src="script/animation.js" type="text/javascript"></script>
-    <script src="script/ascii.js" type="text/javascript"></script>
+    <script src="script/animation.js"></script>
+    <script src="script/ascii.js"></script>
 </head>
 
 <body>
@@ -47,17 +47,17 @@
             <label><input id="turbo" type="checkbox">Turbo</label>
         </fieldset>
     </div>
-    <a href="https://validator.w3.org/check?uri=https://kaoutarsabir.github.io/github.io/lab6/ascii.html">
-        <img src="images/w3c-html.png" alt="Le World Wide Web Consortium" width="100" height="30">
-    </a><br>
-    <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Flab6%2Fascii.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
-        <img src="images/w3c-css.png" alt="Le World Wide Web Consortium" width="100" height="30">
-    </a><br>
-    <a href="http://webster.cs.washington.edu/jslint?uri=https://kaoutarsabir.github.io/github.io/lab6/ascii.html">
-        <img src="images/w3c-js.png" alt="JavaScript Lint" width="100" height="30">
-    </a>
 
-
+    <div>
+        <a href="https://validator.w3.org/check?uri=https://kaoutarsabir.github.io/github.io/lab6/ascii.html">
+            <img src="images/w3c-html.png" alt="Le World Wide Web Consortium" width="100" height="30">
+        </a><br>
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Flab6%2Fascii.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+            <img src="images/w3c-css.png" alt="Le World Wide Web Consortium" width="100" height="30">
+        </a><br>
+        <a href="http://webster.cs.washington.edu/jslint?uri=https://kaoutarsabir.github.io/github.io/lab6/ascii.html">
+            <img src="images/w3c-js.png" alt="JavaScript Lint" width="100" height="30">
+        </a>
     </div>
 
 
