--- a/lab6/ascii.html
+++ b/lab6/ascii.html
@@ -55,7 +55,7 @@
         <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaoutarsabir.github.io%2Fgithub.io%2Flab6%2Fascii.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
             <img src="images/w3c-css.png" alt="Le World Wide Web Consortium" width="100" height="30">
         </a><br>
-        <a href="http://webster.cs.washington.edu/jslint?uri=https://kaoutarsabir.github.io/github.io/lab6/ascii.html">
+        <a href="http://webster.cs.washington.edu/jslint?uri=https://kaoutarsabir.github.io/github.io/lab6/script/ascii.js">
             <img src="images/w3c-js.png" alt="JavaScript Lint" width="100" height="30">
         </a>
     </div>
