--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
 
     <h1>Welcome to WAP Labs</h1>
     <br>
+    <h3>Week I:</h3>
+    <hr>
     <h2><a href="lab1/lab1.html">lab 1 : Home Page</a></h2>
-    <h2><a href="lab2/lab2.html"="">lab 2 : Basic CSS</a></h2>
-    <h2><a href="lab3/tmnt.html"="">lab 3 : Layout</a></h2>
-    <h2><a href="lab4/home.html"="">lab 4 : Responsive Layout </a></h2>
-    <h2><a href="lab5/jsintro.html"="">lab 5 : JS functions </a></h2>
-    <h2><a href="lab6/ascii.html"="">lab 6: ASCII Animation Viewer </a></h2>
+    <h2><a href="lab2/lab2.html">lab 2 : Basic CSS</a></h2>
+    <h2><a href="lab3/tmnt.html">lab 3 : Layout</a></h2>
+    <h2><a href="lab4/home.html">lab 4 : Responsive Layout </a></h2>
+    <h2><a href="lab5/jsintro.html">lab 5 : JS functions </a></h2>
+    <h2><a href="lab6/ascii.html">lab 6: ASCII Animation Viewer </a></h2>
+    <br>
+    <h3>Week II:</h3>
+    <hr>
+    <h2><a href="W2D1/w2d1.html">lab 7: Functional Programming and RegExp </a></h2>
+
 
 
 </body>
