--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -3,15 +3,15 @@
 
 <head>
     <title>My Blog</title>
-    <link rel="stylesheet" type="text/css" media="all" href="css/stylepage.css">
+    <link href="css/stylepage.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
-    <link href="../icon/favicon.ico" rel="shortcut icon" type="image/icon" />
+    <link href="images/kaoutar.png" type="image/icon" />
 </head>
 
 <body>
     <!-- header start -->
     <div id="header" class="section">
-        <img alt="" class="img-circle" src="images/kaoutar.png" />
+        <img class="img-circle" src="images/kaoutar.png" />
         <p>Kaoutar Sabir</p>
     </div>
     <!-- header end -->
