--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="icon/favicon.ico" rel="shortcut icon" type="image/icon" />
 </head>
 
-<body>
+<body style="padding: 60px;">
 
     <h1>Welcome to WAP Labs</h1>
     <br>
