--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h3>Week II:</h3>
     <hr>
     <h2><a href="W2D1/w2d1.html">lab 7: Functional Programming and RegExp </a></h2>
+    <h2><a href="W2D4/lab9.html">lab 9: Inheritance </a></h2>
 
 
 
