--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <hr>
     <h2><a href="W2D1/w2d1.html">lab 7: Functional Programming and RegExp </a></h2>
     <h2><a href="W2D4/lab9.html">lab 9: Inheritance </a></h2>
+    <br>
+    <h3>Week III:</h3>
+    <hr>
+    <h2><a href="W3D1/index.html">lab 12: Class Syntax </a></h2>
 
 
 
