--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <h3>Week III:</h3>
     <hr>
     <h2><a href="W3D1/index.html">lab 12: Class Syntax </a></h2>
+    <h2><a href="W3D2/circle.html">lab 13: Clean Screen - jQuery </a></h2>
+
 
 
 
