--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <hr>
     <h2><a href="W3D1/index.html">lab 12: Class Syntax </a></h2>
     <h2><a href="W3D2/circle.html">lab 13: Clean Screen - jQuery </a></h2>
+    <h2><a href="W3D3/maze.html">lab 14: The Amazing Mouse Maze! - jQuery </a></h2>
 
 
 
